...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wi3-RW-bV7">
                                                <rect key="frame" x="0.0" y="21" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="campoGradosCentigrados"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <constraints>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d73-xK-5Qb">
                                                <rect key="frame" x="0.0" y="21" width="352" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="campoGradosFahrenheit"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <constraints>
...
                                        <rect key="frame" x="0.0" y="278" width="352" height="104.5"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G1g-Ub-dK0">
                                                <rect key="frame" x="135" y="29" width="84" height="31"/>
                                                <color key="tintColor" systemColor="systemIndigoColor"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="Convertir">
                                                    <color key="baseBackgroundColor" systemColor="systemIndigoColor"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <action selector="convertir:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IEl-ic-jNl"/>
                                                </connections>
                                            </button>
...
